# rEAMember

./: .gitignore  LICENSE  README.md  manage.py  pyproject.toml  tensorboard.sh
config/: 256.yml
experiments/FashionMNIST-256/: autoencoder.pth  classifier.pth
experiments/SPOTS-256/: classifier.pth
reamember/: __init__.py  config.py  dataset.py  embeddings.py  train.py
reamember/eam/: associative.py
reamember/neuralnets/: __init__.py  autoencoder.py  classifier.py
